# workit

./: .gitignore  logs.txt  main.py  modulo_base.py  pyproject.toml  requirements.txt
.github/workflows/: docs.yml
docs/source/: conf.py  controlador.rst  index.rst  modelo.rst  server.rst  vista.rst
logs/: logs_20260209.txt  logs_20260211.txt  logs_servidor_20260211.txt
u1_modulos/: main.py  modulo.py
u2_modulos/: main.py  modulo.py
u2_mvc/clase_u3_mvc/: READ.txt  controlador.py  main.py  mis_regex.py  modelo.py  vista.py
workit/: controlador.py  main.py  modelo.py  modulo.py  vista.py  workouts.db
workit/controlador/: __init__.py  controlador.py
workit/modelo/: __init__.py  conexion.py  executor.py  registro.py
workit/poo/: controlador.py  main.py  modulo.py  vista.py
workit/server/: client.py  server.py
workit/utils/: decoradores.py  observadores.py
workit/vista/: __init__.py  app.py  componentes.py  formulario.py  tabla.py
